# Periplus

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  args.cpp  args.h  benchmark.Dockerfile  cache.cpp  cache.h  cache_benchmarking.py  client.py  commands.json  core.cpp  core.h  data.cpp  data.h  db_client.cpp  db_client.h  db_proxy.py  driver.Dockerfile  driver.cpp  e2e_test.py  environment.yml  integration_test.py  main.cpp  memory_map_benchmarking.py  proxy.Dockerfile  python_client.py  sample_app.py  server.cpp  server.h  session.cpp  session.h  test_cache.cpp  test_core.cpp
.github/.workflows/: ci.yaml
.github/workflows/: ci.yaml
benchmarking/: cache_benchmarking.py
clients/python/: .gitignore  LICENSE  README.md  ReadMe.md  setup.py
clients/python/docs/: api_reference.md
clients/python/periplus_client/: __init__.py  client.py  connection.py  error.py
clients/python/periplus_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: sample_app.py  sample_app_requirements.txt
proxies/python/: .gitignore  README.md  ReadMe.md  db_proxy.py  environment.yml  setup.py
proxies/python/examples/: example_requirements.txt  pinecone_proxy.py
proxies/python/periplus_proxy/: __init__.py  controller.py  models.py
proxies/python/periplus_proxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: args.cpp  args.h  cache.cpp  cache.h  core.cpp  core.h  data.cpp  data.h  db_client.cpp  db_client.h  driver.cpp  exceptions.h  server.cpp  session.cpp  session.h
test/e2e/: .gitignore  e2e_test.py  environment.yml  proxy_requirements.txt  test_proxy.py
test/unit/: test_core.cpp
